# vantis

./: .gitignore  README.md
backend/: README.md  openapi.yaml
contracts/: Cargo.toml  README.md
contracts/.stellar/contract-ids/: usdc.json
contracts/.stellar/identity/: admin.toml
contracts/blend-adapter/: Cargo.toml
contracts/blend-adapter/src/: lib.rs  test.rs  types.rs
contracts/oracle-adapter/: Cargo.toml
contracts/oracle-adapter/src/: lib.rs  test.rs
contracts/oracle-adapter/test_snapshots/test/: test_add_asset.1.json  test_blend_multiple_assets_14_decimals.1.json  test_blend_price_format_14_decimals.1.json  test_blend_price_precision_edge_cases.1.json  test_blend_price_staleness_check.1.json  test_blend_volatility_with_14_decimal_prices.1.json  test_initialize.1.json  test_safe_borrow_calculation.1.json  test_update_and_get_price.1.json  test_volatility_calculation.1.json
contracts/policies/borrow-limit/: Cargo.toml
contracts/policies/borrow-limit/src/: lib.rs  test.rs
contracts/policies/borrow-limit/test_snapshots/test/: test_enforce_updates_usage.1.json  test_install_and_get_config.1.json  test_remaining_capacity.1.json  test_uninstall.1.json
contracts/risk-engine/: Cargo.toml
contracts/risk-engine/src/: lib.rs  liquidation.rs  stop_loss.rs  test.rs  volatility.rs
contracts/risk-engine/test_snapshots/test/: test_add_liquidator.1.json  test_blend_adapter_integration.1.json  test_calculate_safe_borrow.1.json  test_check_position_health.1.json  test_enable_disable_stop_loss.1.json  test_initialize.1.json  test_update_params.1.json
contracts/vantis-pool/: Cargo.toml
contracts/vantis-pool/src/: borrow.rs  collateral.rs  health.rs  lib.rs  test.rs
contracts/vantis-pool/test_snapshots/test/: test_add_collateral_asset.1.json  test_deposit_and_withdraw.1.json  test_health_factor.1.json  test_initialize.1.json  test_repay.1.json  test_supply_and_borrow.1.json
contracts/vantis-types/: Cargo.toml
contracts/vantis-types/src/: lib.rs
frontend/: README.md  app.vue  nuxt.config.ts  package-lock.json  package.json
mobile/: .gitignore  App.tsx  FEATURES.md  README.md  SETUP.md  app.json  babel.config.js  eas.json  package-lock.json  package.json  tsconfig.json
scripts/: config.sh  deploy-testnet.sh  utils.sh  (+1 more)
(+85 files in other folders)
