[workspace]
resolver = "2"
members = [
    "policies/borrow-limit",
    "oracle-adapter",
    "vantis-pool",
    "risk-engine",
    "blend-adapter",
    "vantis-types",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/vantis-protocol/vantis-contracts"

[workspace.dependencies]
soroban-sdk = "22.0.0"
soroban-token-sdk = "22.0.0"
stellar-accounts = "0.5.0"
blend-contract-sdk = "1.22.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
